sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-private/network-policy-core.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-private-core
  namespace: traefik-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-private
  egress:
    # Allow DNS lookups (broad access)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow access to K8s API
    - toEntities:
        - kube-apiserver
    # Check plugin updates
    - toFQDNs:
        - matchName: "plugins.traefik.io"
