sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-private/network-policy-egress-headlamp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-private-egress-headlamp
  namespace: traefik-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-private
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: headlamp
            app.kubernetes.io/name: headlamp
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
