sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-private/network-policy-egress-hubble.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-private-egress-hubble
  namespace: traefik-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-private
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: hubble-ui
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
