sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-private/network-policy-egress-mosquitto.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-private-egress-mosquitto
  namespace: traefik-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-private
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosquitto
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
            - port: "9001"
              protocol: TCP
