sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-private/network-policy-egress-obsidian-livesync.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-private-egress-obsidian-livesync
  namespace: traefik-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-private
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: obsidian-livesync
            app.kubernetes.io/instance: obsidian-livesync
            app.kubernetes.io/name: couchdb
      toPorts:
        - ports:
            - port: "5984"
              protocol: TCP
