sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-private/network-policy-egress-traefik-private-dashboard.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-private-egress-traefik-private
  namespace: traefik-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-private
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-private
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
