sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-private/network-policy-ingress-victoria-metrics.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-private-ingress-victoria-metrics
  namespace: traefik-private
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-private
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
            - port: "8080"
              protocol: TCP
